# Opal-Compiler

./: .clang_complete  .gitignore  CMakeLists.txt  DESIGN.txt  README.md  main.cc  test.json
Resources/Scenes/Test/: inputs.lua  main.lua  scene.json
Resources/Shaders/staticmodel/: staticmodel_fs.glsl  staticmodel_vs.glsl
src/: main.cc  resources.cc  resources.hh  scenehandler.cc  scenehandler.hh  util.cc  util.hh
